<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="pull_to_refresh_pull_label">下拉即可刷新</string>
    <string name="pull_to_refresh_refreshing_label">努力加载中…</string>
    <string name="pull_to_refresh_release_label">松开即可刷新</string>
    <string name="accept_order_time">接单时间：</string>
    <string name="account_bank_num">银行卡号</string>
    <string name="account_change_finance_person">如果您的银行卡信息有误或者发生信息变更，请及时发起%1$s</string>
    <string name="account_change_finance_person_red">变更银行账户信息</string>
    <string name="account_finance_bank">开户银行</string>
    <string name="account_finance_person">户名</string>
    <string name="account_min_pay_amount">最低转出金额</string>
    <string name="account_not_open_pay_online">您当前还未开通在线支付</string>
    <string name="account_open_pay_description1">"你必须开通在线支付后才能查看详细的
账户信息和账户余额相关功能"</string>
    <string name="account_open_pay_description2">"开通在线支付的%1$s，将享受更多的
优惠活动支持"</string>
    <string name="account_pay_promt_period">订单款项默认按结款周期入账，满足最低转出金额后，用户可自提或按结款周期系统自提</string>
    <string name="account_pay_promt_self">当日款项默认第3天入账，满足最低转出金额后，用户可自提任意金额</string>
    <string name="account_settle_message">结算信息</string>
    <string name="account_settle_type">结款方式</string>
    <string name="account_withdraw_message">提款信息</string>
    <string name="action_activity_printer_setting_printer_test">打印测试</string>
    <string name="action_get_it">马上进入</string>
    <string name="action_menu_activity_add_or_update_food_info_finish">完成</string>
    <string name="action_menu_add_new_tag">添加分类</string>
    <string name="action_menu_edit">编辑</string>
    <string name="action_menu_pre_order">修改营业时间</string>
    <string name="action_menu_save">保存</string>
    <string name="action_open_hours_add_open_hour">添加营业时间</string>
    <string name="action_poi_status_close">停止营业</string>
    <string name="action_poi_status_open">恢复营业</string>
    <string name="action_poi_status_update_shipping_time">修改营业时间</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">登录</string>
    <string name="adapter_order_accept">接单</string>
    <string name="adapter_order_accept_and_print">接单并打印</string>
    <string name="adapter_order_cancel">取消订单</string>
    <string name="adapter_order_input_cancel_reason">请输入取消订单原因并确认</string>
    <string name="adapter_order_print">打印订单</string>
    <string name="adapter_order_printing">打印中</string>
    <string name="address">地址:</string>
    <string name="app_name">美团外卖商家版</string>
    <string name="auto_delivery">自动发配送</string>
    <string name="auto_delivery_time">接单后自动发配送时间</string>
    <string name="business_receipt">商家联</string>
    <string name="can_not_find_address">"未定位到店铺位置！
请返回修改地址或直接在地图打点"</string>
    <string name="can_not_find_address_in_adcode">"未定位到店铺位置！
请返回修改地址或直接在地图打点"</string>
    <string name="cancel">取消</string>
    <string name="cancel_order_time">取消时间：</string>
    <string name="captcha_error">输入的验证码错误</string>
    <string name="captcha_title">请输入验证码</string>
    <string name="category_edit_haschild_des">该分类下包含二级分类，不可调整为二级分类</string>
    <string name="category_edit_nochild_des">该分类下不包含二级分类，可点击调整更改为二级分类</string>
    <string name="category_edit_second">该分类为二级分类，可点击调整更改为一级分类</string>
    <string name="category_name_chose">%1$s%2$s</string>
    <string name="check_device_tips">账号绑定手机%1$s，新设备首次登录请验证。如需更换绑定手机请联系业务经理</string>
    <string name="close">关闭</string>
    <string name="collase">收起</string>
    <string name="comment_delivery_txt_desc">本次配送评分：</string>
    <string name="comment_hascontent">只看有内容的评论</string>
    <string name="comment_poi_score">商家%1$d星 配送%2$d星</string>
    <string name="comment_shop">商家回复：</string>
    <string name="comment_user">用户追评：</string>
    <string name="commit">提交</string>
    <string name="confirm">确认</string>
    <string name="contain_special_character">输入的号码包含特殊字符</string>
    <string name="cooker_receipt">后厨联</string>
    <string name="customer_receipt">顾客联</string>
    <string name="default_unit">份</string>
    <string name="delivery_comment_bottom">匿名评价</string>
    <string name="delivery_comment_promot">(请至少选择一项)</string>
    <string name="delivery_no_phone_num">没有登记该配送员的电话号码</string>
    <string name="delivery_time">配送营业时间：%1$s</string>
    <string name="delivery_time_default">配送营业时间：</string>
    <string name="delivery_time_describetion">由于你使用的是美团配送-自建/代理，营业时间的设置需在配送营业时间之内。</string>
    <string name="delivery_time_describetion_crowd">由于你使用的是众包服务，营业时间的设置需在配送营业时间之内。</string>
    <string name="dialog_btn_i_get_it">我知道了</string>
    <string name="dialog_text_cancel_delivery">取消配送后，将通知配送员无需再配送，您是否确认取消?</string>
    <string name="dispatcher_contact_desc">如果骑手电话不通，可联系站长助理或站长为您服务</string>
    <string name="download_background">后台下载</string>
    <string name="download_failed">下载失败</string>
    <string name="download_timeout">下载超时</string>
    <string name="edit_food_delete_food">删除%1$s</string>
    <string name="edit_food_preview">预览</string>
    <string name="edit_food_recover_sale">恢复售卖</string>
    <string name="edit_food_stop_sale">暂停售卖</string>
    <string name="empty_accepted_order">暂无已处理订单</string>
    <string name="empty_compensate_order">暂无可申请餐损赔付的订单</string>
    <string name="empty_data_error">数据加载失败</string>
    <string name="empty_logistics_order">暂无需配送的订单</string>
    <string name="empty_new_order">暂无新订单</string>
    <string name="empty_order">暂无订单</string>
    <string name="empty_order_list">没有发现订单</string>
    <string name="empty_pre_order">无该日送达的预订单</string>
    <string name="empty_refund_apply">暂无退款订单</string>
    <string name="empty_refund_log">无退款记录</string>
    <string name="empty_reminder_log">无催单记录</string>
    <string name="empty_reminder_order">暂无用户向您催单</string>
    <string name="empty_search_order">没有找到 %1$s 相关的订单</string>
    <string name="error">错误</string>
    <string name="error_activity_edit_food_category_empty_category_name">分类名字不能为空</string>
    <string name="error_activity_edit_food_info_attr_name_long">输入的属性名不能超过%1$d个字</string>
    <string name="error_activity_edit_food_info_attr_value_long">输入的属性值不能超过%1$d个字</string>
    <string name="error_activity_edit_food_info_description_long">输入的说明不能超过%1$d个字</string>
    <string name="error_activity_edit_food_info_empty_attr_name">属性名不能为空</string>
    <string name="error_activity_edit_food_info_empty_name">请输入%1$s</string>
    <string name="error_activity_edit_food_info_empty_price">请输入价格</string>
    <string name="error_activity_edit_food_info_empty_spec">多规格的规格名不能为空</string>
    <string name="error_activity_edit_food_info_name_long">输入的%1$s不能超过</string>
    <string name="error_activity_edit_food_info_name_num">%1$d个字</string>
    <string name="error_activity_edit_food_info_same_attri">%1$s属性名不能相同,存在相同的属性名!</string>
    <string name="error_activity_edit_food_info_same_spec">规格名不能相同,存在相同的规格名!</string>
    <string name="error_activity_edit_food_info_spec_long">输入的规格名不能超过%1$d个字</string>
    <string name="error_application">出错啦</string>
    <string name="error_empty_captcha">请输入验证码</string>
    <string name="error_empty_password">密码不能为空</string>
    <string name="error_empty_username">用户名不能为空</string>
    <string name="error_no_bluetooth">尚未找到蓝牙模块,请检查你的手机是否支持蓝牙功能</string>
    <string name="error_no_poi">该账号没有门店</string>
    <string name="error_phone">手机号不正确</string>
    <string name="error_poi_info_wrong_phone_number">请输入正确的联系电话</string>
    <string name="error_service">没有权限</string>
    <string name="exfood_empty_activity">您的门店暂无商品,请点击新增</string>
    <string name="exfood_empty_offine_activity">暂无商品</string>
    <string name="exfood_first_offline_spu_list_empty">该分类下暂无下架商品</string>
    <string name="exfood_first_spu_list_empty">"该分类下暂无二级
分类和商品"</string>
    <string name="exfood_second_category_list_empty">该分类下暂无二级分类</string>
    <string name="exfood_subfirst_spu_list_empty">如增加二级分类请点击管理分类</string>
    <string name="expand">展开</string>
    <string name="feedback_camera">拍照</string>
    <string name="feedback_cancel">取消</string>
    <string name="feedback_notice">反馈提交后,我们会在3个工作日内回复您</string>
    <string name="feedback_open_gallery">打开相册</string>
    <string name="feedback_phone">联系方式:</string>
    <string name="feedback_submit">提交</string>
    <string name="feedback_text"><u>网络诊断并反馈</u></string>
    <string name="feedback_type">请选择反馈类型:</string>
    <string name="fetch_food_time">取%1$s</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="find_back_password">找回密码</string>
    <string name="find_shop_error">地址搜索出错</string>
    <string name="finish">完成</string>
    <string name="food_attr_empty">属性标签不能为空</string>
    <string name="food_attr_full">最多只能添加10个属性</string>
    <string name="food_info_add_type">添加规格(为%1$s设置不同价格)</string>
    <string name="food_info_type">规格</string>
    <string name="hint_activity_edit_food_info_price">请输入价格</string>
    <string name="hint_activity_edit_food_info_stock">默认不限</string>
    <string name="network_diagnostic_copy_to_clipboard">复制到剪贴板</string>
    <string name="network_diagnostic_send_report">发送电子邮件</string>
    <string name="network_diagnostic_succeed">诊断完成，已生成诊断报告</string>
    <string name="network_diagnostic_succeed_hint">您可以选择发送电子邮件，或复制到剪贴板通过其他途径将诊断报告发送给我们，我们会尽快为您查找当前网络问题。</string>
    <string name="open">打开</string>
    <string name="order_filter_no_finish_all_with_logistics">全部未完成订单</string>
    <string name="order_filter_no_finish_delivery_completed">骑手已送达</string>
    <string name="order_filter_no_finish_delivery_dispatch_completed">骑手已取货</string>
    <string name="order_filter_no_finish_refund">申请退款</string>
    <string name="order_filter_no_finish_wait_delivery_confirm">待骑手接单</string>
    <string name="order_filter_no_finish_wait_delivery_dispatch">待骑手取货</string>
    <string name="order_filter_no_finish_wait_delivery_initialize">待发起配送</string>
    <string name="pre_order_setting_choose_date_description">用户可下哪些日期的订单?</string>
    <string name="pre_order_setting_choose_date_tips">至少选择一天，或相邻几天，不能隔天选择。</string>
    <string name="pre_order_setting_hint">预订单是指用户下单可指定送达时间的订单。了解更多</string>
    <string name="pre_order_setting_out_support_description">休息时间，订单不支持指定时间送达</string>
    <string name="pre_order_setting_out_support_text">休息时间支持预订</string>
    <string name="setting_check_update">检查更新</string>
    <string name="setting_current_account">当前账号</string>
    <string name="setting_exit_account">退出登录</string>
    <string name="setting_expand_food_info">接单后默认收起商品信息</string>
    <string name="setting_expand_food_info_tips">关闭后,将默认展开商品信息</string>
    <string name="setting_feedback">产品意见反馈</string>
    <string name="setting_order_sound_setting">消息和提示音设置</string>
    <string name="setting_poi_info">门店信息</string>
    <string name="setting_printe">打印设置</string>
    <string name="setting_restaurant_change">门店切换</string>
    <string name="setting_self_in">新开门店</string>
    <string name="setting_service">商户服务中心</string>
    <string name="title_activity_edit_food_info_price">价格(*必填)</string>
    <string name="title_activity_edit_food_info_stock">库存</string>
    <string name="title_activity_edit_food_info_use_stock">使用库存</string>
</resources>