<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <org.jraf.android.backport.switchwidget.Switch android:id="@id/pre_order_setting_out_support_btn" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" app:textOn="@string/open" app:textOff="@string/close" />
        <TextView android:textSize="@dimen/text_size_medium" android:id="@id/txt_pre_order_rest_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_ui_margin_large" android:text="@string/pre_order_setting_out_support_text" android:layout_toLeftOf="@id/pre_order_setting_out_support_btn" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_secondary" android:id="@id/pre_order_setting_out_hours_description_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_ui_margin" android:layout_marginBottom="@dimen/default_ui_margin" android:text="@string/pre_order_setting_out_support_description" android:layout_toLeftOf="@id/pre_order_setting_out_support_btn" android:layout_below="@id/txt_pre_order_rest_tip" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_secondary" android:id="@id/pre_order_hint" android:padding="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_ui_margin" android:layout_marginBottom="@dimen/default_ui_margin" android:text="@string/pre_order_setting_hint" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_pre_order_choose_hint" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_size_medium" android:padding="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_ui_margin" android:layout_marginRight="@dimen/default_ui_margin" android:text="@string/pre_order_setting_choose_date_description" />
        <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/text_secondary" android:paddingLeft="@dimen/default_ui_margin" android:paddingRight="@dimen/default_ui_margin" android:paddingBottom="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pre_order_setting_choose_date_tips" />
    </LinearLayout>
</LinearLayout>