<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/foodinfo_edit_title_small" android:paddingLeft="@dimen/foodinfo_edit_leftright_margin" android:paddingTop="@dimen/default_ui_margin_large" android:paddingBottom="@dimen/default_ui_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/food_info_type" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_food_type_single" android:layout_width="fill_parent" android:layout_height="120.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/foodinfo_edit_leftright_margin" android:paddingTop="@dimen/default_ui_margin" android:paddingRight="@dimen/foodinfo_edit_leftright_margin" android:paddingBottom="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/foodinfo_default_txt_size" android:id="@id/txt_edit_food_info_price" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_ui_margin" android:text="@string/title_activity_edit_food_info_price" />
            <EditText android:textSize="@dimen/foodinfo_default_txt_size" android:textColor="@color/o_pre_green" android:gravity="right" android:id="@id/et_edit_food_info_price" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_activity_edit_food_info_price" android:inputType="numberDecimal" />
        </LinearLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider" android:scaleType="fitXY" android:contentDescription="@null" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/foodinfo_edit_leftright_margin" android:paddingTop="@dimen/default_ui_margin" android:paddingBottom="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/foodinfo_default_txt_size" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_ui_margin" android:text="@string/title_activity_edit_food_info_use_stock" android:layout_weight="1.0" />
            <org.jraf.android.backport.switchwidget.Switch android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/switch_setting_vibrator" android:layout_width="wrap_content" android:layout_height="wrap_content" app:textOn="@string/open" app:textOff="@string/close" />
        </LinearLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider" android:scaleType="fitXY" android:contentDescription="@null" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:paddingLeft="@dimen/foodinfo_edit_leftright_margin" android:paddingTop="@dimen/default_ui_margin" android:paddingRight="@dimen/foodinfo_edit_leftright_margin" android:paddingBottom="@dimen/default_ui_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/foodinfo_default_txt_size" android:id="@id/txt_edit_food_info_stock" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/default_ui_margin" android:text="@string/title_activity_edit_food_info_stock" />
            <EditText android:textSize="@dimen/foodinfo_default_txt_size" android:textColor="@color/text_secondary" android:gravity="right" android:id="@id/et_edit_food_info_stock" android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_activity_edit_food_info_stock" android:inputType="number" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_food_type_container" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/divider" android:scaleType="fitXY" android:contentDescription="@null" />
    <TextView android:textSize="@dimen/foodinfo_default_txt_size" android:gravity="center_vertical" android:id="@id/txt_food_info_add_type" android:background="@color/white" android:paddingLeft="@dimen/foodinfo_edit_leftright_margin" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/food_info_add_type" android:drawableLeft="@drawable/ic_add_food" android:drawablePadding="@dimen/foodinfo_drawable_margin" />
    <TextView android:textSize="@dimen/foodinfo_edit_title_small" android:textColor="@color/foodinfo_type_description" android:gravity="center_vertical" android:id="@id/tv_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/foodinfo_edit_leftright_margin" android:layout_marginTop="@dimen/foodinfo_type_topmargin" android:layout_marginRight="@dimen/foodinfo_edit_leftright_margin" />
</merge>