<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginBottom="30.0dip">
        <TextView android:textSize="18.0sp" android:textColor="@color/network_diagnostic_black" android:gravity="center_vertical" android:id="@id/diagnostic_complete_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_diagnostic_succeed" android:drawableLeft="@drawable/network_diagnostic_result_succeed" android:drawablePadding="10.0dip" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textColor="@color/network_diagnostic_white" android:id="@id/diagnostic_complete_btn" android:background="@drawable/network_diagnostic_bg_cornered_yellow" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/network_diagnostic_send_report" android:layout_weight="1.0" />
        <Button android:textColor="@color/network_diagnostic_white" android:id="@id/copy_to_clipborad_btn" android:background="@drawable/network_diagnostic_bg_cornered_yellow" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/network_diagnostic_copy_to_clipboard" android:layout_weight="1.0" />
    </LinearLayout>
    <TextView android:id="@id/diagnostic_hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/network_diagnostic_succeed_hint" />
</LinearLayout>