<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_order_all_with_logistics" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/order_filter_no_finish_all_with_logistics" style="@style/filter_btn" />
        <TextView android:id="@id/tv_filter_no_finish_order_all_with_logistics" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_wait_delivery_initialize" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/order_filter_no_finish_wait_delivery_initialize" style="@style/filter_btn" />
        <TextView android:textColor="@color/text_red" android:id="@id/tv_filter_no_finish_wait_delivery_initialize" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_wait_delivery_confirm" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/order_filter_no_finish_wait_delivery_confirm" style="@style/filter_btn" />
        <TextView android:id="@id/tv_filter_no_finish_wait_delivery_confirm" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_wait_delivery_dispatch" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/tv_filter_no_finish_wait_delivery_dispatch_tab" android:text="@string/order_filter_no_finish_wait_delivery_dispatch" style="@style/filter_btn" />
        <TextView android:id="@id/tv_filter_no_finish_wait_delivery_dispatch" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_delivery_dispatch_completed" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/tv_filter_no_finish_delivery_dispatch_completed_tab" android:text="@string/order_filter_no_finish_delivery_dispatch_completed" style="@style/filter_btn" />
        <TextView android:id="@id/tv_filter_no_finish_delivery_dispatch_completed" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_delivery_completed" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/order_filter_no_finish_delivery_completed" style="@style/filter_btn" />
        <TextView android:id="@id/tv_filter_no_finish_delivery_completed" style="@style/filter_tv" />
    </LinearLayout>
    <View android:background="@color/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_filter_no_finish_order_refund_with_logistics" android:background="@drawable/d_bg_filter_btn_gray_selector" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/order_filter_no_finish_refund" style="@style/filter_btn" />
        <TextView android:textColor="@color/text_red" android:id="@id/tv_filter_no_finish_order_refund_with_logistics" style="@style/filter_tv" />
    </LinearLayout>
</LinearLayout>